@@ -41,9 +41,7 @@ import javax.servlet.http.HttpServletResponse;
 
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang.StringUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.apache.commons.lang3.StringUtils;
 import org.sakaiproject.signup.logic.SakaiFacade;
 import org.sakaiproject.signup.logic.SignupCalendarHelper;
 import org.sakaiproject.signup.logic.SignupMeetingService;
@@ -62,6 +60,7 @@ import org.sakaiproject.user.api.User;
 
 import lombok.Getter;
 import lombok.Setter;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * <p>
@@ -70,7 +69,10 @@ import lombok.Setter;
  * etc.
  * </P>
  */
-abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMessageTypes, MeetingTypes {
+@Slf4j
+public abstract class SignupUIBaseBean implements SignupBeanConstants, SignupMessageTypes, MeetingTypes {
+
+	private static final String DB_ERROR_OR_EVENT_NOT_EXISTED = "db.error_or_event.notExisted";
 
 	protected SakaiFacade sakaiFacade;
 
@@ -89,22 +91,24 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 
 	protected boolean currentUserSignedup;
 
-	protected static boolean DEFAULT_SEND_EMAIL = "true".equalsIgnoreCase(Utilities.getSignupConfigParamVal(
-										"signup.default.email.notification", "true")) ? true : false;
+	protected static final boolean DEFAULT_SEND_EMAIL = "true".equalsIgnoreCase(Utilities.getSignupConfigParamVal(
+										"signup.default.email.notification", "true"));
 
-	protected static boolean DEFAULT_EXPORT_TO_CALENDAR_TOOL = "true".equalsIgnoreCase(Utilities.getSignupConfigParamVal("signup.default.export.to.calendar.setting", "true")) ? true : false;
+	protected static final boolean DEFAULT_EXPORT_TO_CALENDAR_TOOL = "true".equalsIgnoreCase(Utilities.getSignupConfigParamVal("signup.default.export.to.calendar.setting", "true"));
+
+	protected static final String DEFAULT_SEND_EMAIL_TO_SELECTED_PEOPLE_ONLY = Utilities.getSignupConfigParamVal(
+			"signup.default.email.selected", SEND_EMAIL_ALL_PARTICIPANTS, VALID_SEND_EMAIL_TO_SELECTED_PEOPLE_ONLY);
 	
 	protected boolean publishToCalendar = DEFAULT_EXPORT_TO_CALENDAR_TOOL;
 	
 	protected boolean sendEmail = DEFAULT_SEND_EMAIL;
 
-	protected Logger logger = LoggerFactory.getLogger(SignupUIBaseBean.class);
-
 	protected Boolean publishedSite;
 	
 	//protected boolean sendEmailAttendeeOnly = false;
 	
-	protected String sendEmailToSelectedPeopleOnly = SEND_EMAIL_ALL_PARTICIPANTS;
+	protected String sendEmailToSelectedPeopleOnly = Utilities.getSignupConfigParamVal(
+			"signup.default.email.selected", SEND_EMAIL_ALL_PARTICIPANTS);
 	
 	private int maxSlots; 
 
@@ -132,8 +136,8 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 				meetingWrapper.setMeeting(meeting);
 				updateTimeSlotWrappers(meetingWrapper);
 			} catch (Exception e) {
-				Utilities.addErrorMessage(Utilities.rb.getString("db.error_or_event.notExisted"));
-				logger.error(Utilities.rb.getString("db.error_or_event.notExisted") + " - " + e.getMessage());
+				Utilities.addErrorMessage(Utilities.rb.getString(DB_ERROR_OR_EVENT_NOT_EXISTED));
+				log.error(Utilities.rb.getString(DB_ERROR_OR_EVENT_NOT_EXISTED) + " - " + e.getMessage());
 			}
 		}
 		return meetingWrapper;
@@ -145,23 +149,23 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 		if (meeting == null)
 			return;
 
-		List timeslots = meeting.getSignupTimeSlots();
+		List<SignupTimeslot> timeslots = meeting.getSignupTimeSlots();
 		if (timeslots == null)
 			return;
 
-		List<TimeslotWrapper> timeslotWrapperList = new ArrayList<TimeslotWrapper>();
+		List<TimeslotWrapper> timeslotWrapperList = new ArrayList<>();
 		setCurrentUserSignedup(false);// reset and make sure to capture new
 		// changes
 		int i = 0;
 		int totalSignedupSlots=0;
-		for (Iterator iter = timeslots.iterator(); iter.hasNext();) {
-			SignupTimeslot elm = (SignupTimeslot) iter.next();
-			TimeslotWrapper tsw = new TimeslotWrapper(elm, sakaiFacade.getCurrentUserId());
+		for (Iterator<SignupTimeslot> iter = timeslots.iterator(); iter.hasNext();) {
+			SignupTimeslot signupTimeslot = iter.next();
+			TimeslotWrapper tsw = new TimeslotWrapper(signupTimeslot, sakaiFacade.getCurrentUserId());
 			
-			List<AttendeeWrapper> attendeeWrp = new ArrayList<AttendeeWrapper>();
+			List<AttendeeWrapper> attendeeWrp = new ArrayList<>();
 			int posIndex = 0;
 			//clean the list
-			List<SignupAttendee> cleanedList = getValidAttendees(elm.getAttendees());
+			List<SignupAttendee> cleanedList = getValidAttendees(signupTimeslot.getAttendees());
 			for (SignupAttendee attendee : cleanedList) {
 				AttendeeWrapper attWrp = new AttendeeWrapper(attendee, sakaiFacade.getUserDisplayLastFirstName(attendee
 						.getAttendeeUserId()));
@@ -184,7 +188,7 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 			
 			tsw.setAttendeeWrappers(attendeeWrp);
 
-			tsw.setWaitingList(wrapWaiters(elm.getWaitingList()));
+			tsw.setWaitingList(wrapWaiters(signupTimeslot.getWaitingList()));
 			tsw.setPositionInTSlist(i++);
 			timeslotWrapperList.add(tsw);
 
@@ -211,8 +215,8 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 			updateTimeSlotWrappers(getMeetingWrapper());
 			return destinationUrl;
 		} catch (Exception e) {
-			Utilities.addErrorMessage(Utilities.rb.getString("db.error_or_event.notExisted"));
-			logger.warn(Utilities.rb.getString("db.error_or_event.notExisted") + " - " + e.getMessage());
+			Utilities.addErrorMessage(Utilities.rb.getString(DB_ERROR_OR_EVENT_NOT_EXISTED));
+			log.warn(Utilities.rb.getString(DB_ERROR_OR_EVENT_NOT_EXISTED) + " - " + e.getMessage());
 			Utilities.resetMeetingList();
 			return MAIN_EVENTS_LIST_PAGE_URL;
 		}
@@ -246,10 +250,7 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 	
 	public boolean isMeetingOverRepeatPeriod(Date startTime, Date endTime, int repeatPeriodInDays){
 		long duration= endTime.getTime()- startTime.getTime();
-		if( 24*repeatPeriodInDays - duration /(MINUTE_IN_MILLISEC * Hour_In_MINUTES) >= 0  )
-			return false;
-		
-		return true;
+		return ( 24*repeatPeriodInDays - duration /(MINUTE_IN_MILLISEC * Hour_In_MINUTES) < 0  );
 	}
 
 	/** convert SignupAttendee to AttendeeWrapper object */
@@ -275,7 +276,7 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 
 	/** convert SignupAttendee to AttendeeWrapper object */
 	private List<AttendeeWrapper> wrapWaiters(List<SignupAttendee> attendees) {
-		List<AttendeeWrapper> attendeeWrp = new ArrayList<AttendeeWrapper>();
+		List<AttendeeWrapper> attendeeWrp = new ArrayList<>();
 		for (SignupAttendee attendee : attendees) {
 			attendeeWrp
 					.add(new AttendeeWrapper(attendee, sakaiFacade.getUserDisplayLastFirstName(attendee.getAttendeeUserId())));
@@ -527,15 +528,12 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 		if (this.publishedSite == null) {
 			try {
 				boolean status = sakaiFacade.getSiteService().getSite(sakaiFacade.getCurrentLocationId()).isPublished();
-				this.publishedSite = new Boolean(status);
-
+				this.publishedSite = Boolean.valueOf(status);
 			} catch (Exception e) {
-				logger.warn(e.getMessage());
-				this.publishedSite = new Boolean(false);
-
+				log.warn(e.getMessage());
+				this.publishedSite = Boolean.FALSE;
 			}
 		}
-
 		return publishedSite.booleanValue();
 	}
 
@@ -561,10 +559,10 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 		this.attachmentHandler = attachmentHandler;
 	}
 	
-	protected void markerTimeslots(List<TimeslotWrapper> TimeSlotWrpList){
+	protected void markerTimeslots(List<TimeslotWrapper> timeSlotWrpList){
 		int i=0;
-		if(TimeSlotWrpList !=null){
-			for (TimeslotWrapper tsWrp : TimeSlotWrpList) {
+		if(timeSlotWrpList !=null){
+			for (TimeslotWrapper tsWrp : timeSlotWrpList) {
 				tsWrp.setTsMarker(i);
 				i++;
 			}
@@ -602,7 +600,7 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 	 * @return	the cleaned list
 	 */
 	public List<SignupAttendee> getValidAttendees(List<SignupAttendee> attendees) {
-		List<SignupAttendee> cleanedList = new ArrayList<SignupAttendee>();
+		List<SignupAttendee> cleanedList = new ArrayList<>();
 		
 		for(SignupAttendee attendee: attendees){
 			if(sakaiFacade.checkForUser(attendee.getAttendeeUserId())) {
@@ -645,7 +643,7 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 	public List<String> getEidsForEmail(String email) {
 		Collection<User> users = sakaiFacade.getUsersByEmail(email);
 		
-		List<String> eids = new ArrayList<String>();
+		List<String> eids = new ArrayList<>();
 		for(User u:users) {
 			eids.add(u.getEid());
 		}
@@ -678,7 +676,7 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 	//convert a list of SignupAttendees to a list of userIds
 	public List<String> convertAttendeesToUuids(List<SignupAttendee> attendees) {
 		
-		List<String> uuids = new ArrayList<String>();
+		List<String> uuids = new ArrayList<>();
 		
 		for(SignupAttendee a: attendees) {
 			uuids.add(a.getAttendeeUserId());
@@ -690,13 +688,21 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 	//convert a list of AttendeeWrappers to a list of userIds
 	public List<String> convertAttendeeWrappersToUuids(List<AttendeeWrapper> attendees) {
 		
-		List<String> uuids = new ArrayList<String>();
+		List<String> uuids = new ArrayList<>();
 		
 		for(AttendeeWrapper a: attendees) {
 			uuids.add(a.getSignupAttendee().getAttendeeUserId());
 		}
 		
 		return uuids;
+	}
+
+	/**
+	 * Determines if user has a valid session
+	 * @return if user has a valid session
+	 */
+	public boolean isSessionValid() {
+		return getMeetingWrapper() == null;
 	}
 
 	
@@ -707,14 +713,16 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 	 */
 	public String getAllAttendeesEmailAddressesFormatted() {
 		
-		Set<String> emails = new HashSet<String>();
+		Set<String> emails = new HashSet<>();
 		
 		StringBuilder sb = new StringBuilder();
-		for (TimeslotWrapper tsWrapper : timeslotWrappers) {
-			for(AttendeeWrapper atWrapper : tsWrapper.getAttendeeWrappers()) {
-				String email = atWrapper.getAttendeeEmail();
-				if(StringUtils.isNotBlank(email)){
-					emails.add(email);
+		if (timeslotWrappers!=null){
+			for (TimeslotWrapper tsWrapper : timeslotWrappers) {
+				for(AttendeeWrapper atWrapper : tsWrapper.getAttendeeWrappers()) {
+					String email = atWrapper.getAttendeeEmail();
+					if(StringUtils.isNotBlank(email)){
+						emails.add(email);
+					}
 				}
 			}
 		}
@@ -734,8 +742,6 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 	 * Generate and send for download an ICS file for the meeting. Contains no timeslots, just the meeting itself.
 	 * This method is in this particular bean because 1. We have access to the meeting here, and 2. it is used in more than one sub-bean.
 	 */
-	
-	private UserTimeZone userTimeZone;
 	
 	public void downloadICSForMeeting() {
 		String filePath;
@@ -760,10 +766,10 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 		}
 		
 		if(StringUtils.isNotBlank(filePath)) {
-			logger.debug("filepath: " + filePath);
+			log.debug("filepath: " + filePath);
 			sendDownload(filePath, ICS_MIME_TYPE);
 		} else {
-			logger.error("Could not generate file for download");
+			log.error("Could not generate file for download");
 			//TODO this could set an error and return perhaps.
 		}
 	}
@@ -810,10 +816,10 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 		}
 		
 		if(StringUtils.isNotBlank(filePath)) {
-			logger.debug("filepath: " + filePath);
+			log.debug("filepath: " + filePath);
 			sendDownload(filePath, ICS_MIME_TYPE);
 		} else {
-			logger.error("Could not generate file for download");
+			log.error("Could not generate file for download");
 			//TODO this could set an error and return perhaps.
 		}
 		
@@ -833,24 +839,24 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 		cal.setTimeZone(currentUserTimeZone);
 		
 		//get user Pref display hour, day, month and year
-		int userPrefMinute = cal.get(cal.MINUTE);
-		int userPrefHour = cal.get(cal.HOUR_OF_DAY);
-		int userPrefDay = cal.get(cal.DAY_OF_MONTH);
-		int userPrefMonth = cal.get(cal.MONTH);
-		int userPreYear = cal.get(cal.YEAR);
+		int userPrefMinute = cal.get(Calendar.MINUTE);
+		int userPrefHour = cal.get(Calendar.HOUR_OF_DAY);
+		int userPrefDay = cal.get(Calendar.DAY_OF_MONTH);
+		int userPrefMonth = cal.get(Calendar.MONTH);
+		int userPreYear = cal.get(Calendar.YEAR);
 		
 		Calendar calNew = Calendar.getInstance();
 		calNew.setTime(dateBasedOnServerTimezone);
-		calNew.set(cal.MINUTE,userPrefMinute);
-		calNew.set(cal.HOUR_OF_DAY, userPrefHour);
-		calNew.set(cal.DAY_OF_MONTH, userPrefDay);
-		calNew.set(cal.MONTH, userPrefMonth);
-		calNew.set(cal.YEAR, userPreYear);
+		calNew.set(Calendar.MINUTE,userPrefMinute);
+		calNew.set(Calendar.HOUR_OF_DAY, userPrefHour);
+		calNew.set(Calendar.DAY_OF_MONTH, userPrefDay);
+		calNew.set(Calendar.MONTH, userPrefMonth);
+		calNew.set(Calendar.YEAR, userPreYear);
 		return calNew.getTime();		
 	}
 	
 	private void handleICSDownloadWarningToUser(){
-		logger.error("The site calendar could not be retrieved when using the Signup tool");
+		log.error("The site calendar could not be retrieved when using the Signup tool");
 		String warningFileName = Utilities.rb.getString("ics_file_name_for_failure_warning");
 		String warningMsg = Utilities.rb.getString("ics_message_for_failure_warning");
 		sendDownloadWarning(warningFileName,warningMsg);
@@ -886,7 +892,7 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 
 			out.flush();
 		} catch (IOException ex) {
-			logger.warn("Error generating file for download:" + ex.getMessage());
+			log.warn("Error generating file for download:" + ex.getMessage());
 		} finally {
 			IOUtils.closeQuietly(in);
 			IOUtils.closeQuietly(out);
@@ -921,10 +927,12 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 
 			out.flush();
 		} catch (IOException ex) {
-			logger.warn("Error generating file for download:" + ex.getMessage());
+			log.warn("Error generating file for download:" + ex.getMessage());
 		} finally {
 			try{
-				out.close();
+				if(out != null) {
+					out.close();
+				}
 			}catch (Exception e){
 				//do nothing;
 			}
@@ -941,8 +949,6 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 		return calendarHelper.isIcsEnabled();
 	}
 	
-	private String iframeId = "";
-
 	/**
 	 * This is a getter method which provide current Iframe id for refresh
 	 * IFrame purpose.
@@ -952,12 +958,11 @@ abstract public class SignupUIBaseBean implements SignupBeanConstants, SignupMes
 	public String getIframeId() {
 		HttpServletRequest request = (HttpServletRequest) FacesContext.getCurrentInstance().getExternalContext()
 				.getRequest();
-		String iFrameId = (String) request.getAttribute("sakai.tool.placement.id");
-		return iFrameId;
+		return (String) request.getAttribute("sakai.tool.placement.id");
 	}
-
+	
 	public void setIframeId(String iframeId) {
-		this.iframeId = iframeId;
+
 	}
 
 	public String getCustomLocation() {
